<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/md_theme_primaryContainer">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/toolbar"
            android:minHeight="?attr/actionBarSize"
            app:title="Edit item"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:menu="@menu/item_menu"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_name"
                    android:inputType="text"
                    android:hint="@string/item_name_label"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/decrease_quantity_button"
                    android:src="@drawable/stat_minus_1_24px"
                    android:id="@+id/decrease_quantity_button"
                    android:background="#00000000"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_height="wrap_content"
                    style="?attr/textInputOutlinedStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/quantity"
                        android:inputType="number"
                        android:hint="@string/item_quantity_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/increase_quantity_button"
                    android:src="@drawable/stat_1_24px"
                    android:id="@+id/increase_quantity_button"
                    android:background="#00000000"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expiration_date_layout"
                android:gravity="center">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/expirable"
                    android:text="@string/item_expirable"
                    android:layout_marginEnd="8dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expiration_date"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_expiration_date_label"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/calendar_month_24px"
                    app:endIconContentDescription="Open Expiration Date Picker"
                    style="?attr/textInputOutlinedStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/take_picture"
                    android:contentDescription="@string/take_picture"
                    android:src="@drawable/photo_camera_24px"
                    android:backgroundTint="#00000000"
                    />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress_bar"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/ok_button"
        android:contentDescription="@string/ok_button"
        android:src="@drawable/check_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>