<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="5dp"
    android:paddingVertical="2dp"
    android:gravity="center">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/take_item_radio"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_height="match_parent"
        android:id="@+id/item_name"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/new_item"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/quantity_text_layout"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_quantity_label"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantity"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/expiration_date_label"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="18sp"
        android:layout_marginStart="8dp"
        android:text="01/01/2026"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_item_button"
        android:contentDescription="@string/edit_item_button"
        android:src="@drawable/info_24px"
        android:backgroundTint="#00000000"
        />

</LinearLayout>