<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/app_settings" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notification_days_line"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/earlyNotificationDays"
            android:gravity="end|center"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="18sp"
            android:maxLines="1"
            android:layout_weight="1.0"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notification_days_input_text"
                android:inputType="number"
                android:hint="@string/days"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notification_hour_input_text"
                android:inputType="number"
                android:hint="@string/hours"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expiration_date_line"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/notification_days_line">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/default_expiration_date"
            android:layout_marginEnd="8dp"
            android:gravity="end|center"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="18sp"
            android:maxLines="1"
            android:layout_weight="1.0"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/default_expiration_date_input_text"
                android:inputType="number"
                android:hint="@string/days"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>