<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/menu_24px"
        android:background="@color/md_theme_primaryContainer"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:titleCollapseMode="scale"
            >

            <com.google.android.material.appbar.MaterialToolbar
                style="?attr/collapsingToolbarLayoutMediumStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@id/toolbar"
                app:title="@string/app_name"
                app:layout_collapseMode="pin"
                app:menu="@menu/activity_main_top_bar_menu"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/pantry_pie_chart"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/open_patry_button"
            android:src="@drawable/info_24px"
            android:id="@+id/open_pantry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pantry_pie_chart"
            app:layout_constraintBottom_toBottomOf="@+id/pantry_pie_chart"
            android:background="@color/md_theme_background"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/list_view"
            app:layout_constraintTop_toBottomOf="@+id/pantry_pie_chart"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_list_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/add_list_button"
        android:src="@drawable/add_24px"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>